[project]
name = "testfixtures"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiokafka>=0.12.0",
    "alembic>=1.16.2",
    "apscheduler>=3.11.0",
    "async-timeout==5.0.1",
    "babel>=2.17.0",
    "blinker>=1.9.0",
    "boltons==25.0.0",
    "boto3>=1.38.46",
    "celery==5.5.2",
    "celery-once==3.0.1",
    "channels[daphne]==4.2.2",
    "cherrypy>=18.10.0",
    "colorlog>=6.9.0",
    "dj-database-url==2.3.0",
    "django==5.2.2",
    "django-allow-cidr==0.8.0",
    "django-anymail[sendgrid]==13.0",
    "django-celery-beat==2.8.1",
    "django-cors-headers==4.7.0",
    "django-environ==0.12.0",
    "django-fernet-encrypted-fields==0.3.0",
    "django-guid==3.5.1",
    "django-import-export==4.3.8",
    "django-import-export-celery==1.7.1",
    "django-localflavor==5.0",
    "django-ninja==1.4.1",
    "django-ninja-extra==0.30.0",
    "django-pgtrigger==4.15.2",
    "django-picklefield>=3.3",
    "django-prettyjson==0.4.1",
    "django-rest-knox==5.0.2",
    "django-storages[google]==1.14.6",
    "django-test-migrations==1.5.0",
    "djangoql==0.18.1",
    "djangorestframework==3.16.0",
    "djangorestframework-camel-case==1.4.2",
    "fastapi>=0.115.14",
    "faust-streaming[aiodns,cchardet,ciso8601,cython,orjson,rocksdb,uvloop]>=0.11.3",
    "fhirclient==4.3.1",
    "flask>=3.1.1",
    "flask-admin>=1.6.1",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "flask-principal>=0.4.0",
    "flask-security>=5.6.2",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "flower==2.0.1",
    "geoalchemy2>=0.17.1",
    "google-cloud-aiplatform==1.96.0",
    "google-cloud-storage==2.19.0",
    "gunicorn==23.0.0",
    "jinja2>=3.1.6",
    "kafka-python>=2.2.14",
    "loguru==0.7.3",
    "lxml==5.4.0",
    "mako>=1.3.10",
    "markdownify==0.13.1",
    "more-itertools==10.7.0",
    "opentelemetry-distro>=0.55b1",
    "opentelemetry-exporter-otlp-proto-http>=1.34.1",
    "opentelemetry-instrumentation-django>=0.55b1",
    "paho-mqtt>=2.1.0",
    "pandas==2.2.3",
    "parse==1.20.2",
    "pillow>=11.2.1",
    "playwright==1.52.0",
    "prefect-client==3.4.1",
    "psycopg[binary]==3.2.9",
    "pyasn1>=0.6.1",
    "pydantic-xml==2.17.0",
    "pydantic[email]==2.11.7",
    "pydot>=4.0.1",
    "pyjwt==2.10.1",
    "pymupdf==1.25.5",
    "pypdf==5.6.1",
    "pyramid>=2.0.2",
    "pysnmp>=7.1.21",
    "pytest==8.4.1",
    "pytest-django==4.11.1",
    "python-statemachine>=2.5.0",
    "pytz==2025.2",
    "redis==6.1.0",
    "requests==2.32.4",
    "s3fs>=0.4.2",
    "sentry-sdk==2.29.1",
    "setproctitle==1.3.6",
    "sf-hamilton==1.88.0",
    "simplejson==3.20.1",
    "speaklater>=1.3",
    "split>=0.4",
    "structlog>=25.4.0",
    "tenacity==9.1.2",
    "tiktoken==0.9.0",
    "urllib3==2.5.0",
    "vcrpy>=5.1.0",
    "weasyprint==65.1",
    "whitenoise[brotli]==6.9.0",
    "zope>=5.13",
]

[dependency-groups]
dev = [
    "black==25.1.0",
    "coverage==7.8.0",
    "dirty-equals==0.9.0",
    "django-stubs==5.2.0",
    "factory-boy==3.3.3",
    "faker==37.4.0",
    "filelock==3.18.0",
    "flower==2.0.1",
    "inline-snapshot==0.23.2",
    "ipython>=9.3.0",
    "isort==6.0.1",
    "mypy==1.16.0",
    "nest-asyncio==1.6.0",
    "pre-commit==4.2.0",
    "prefect==3.4.1",
    "pytest-asyncio==1.0.0",
    "pytest-cov==6.2.1",
    "pytest-mock==3.14.1",
    "pytest-playwright==0.7.0",
    "pytest-randomly==3.16.0",
    "pytest-recording==0.13.4",
    "pytest-xdist==3.6.1",
    "refurb==2.1.0",
    "responses==0.25.7",
    "rope>=1.13.0",
    "ruff==0.11.12",
    "time-machine==2.16.0",
]
